# authenticate

./: authenticate.cabal
Web/Authenticate/: Rpxnow.hs
authenticate/: authenticate.cabal
authenticate-oauth/: .gitignore  authenticate-oauth.cabal
authenticate-oauth/Web/Authenticate/: OAuth.hs
authenticate-oauth/Web/Authenticate/OAuth/: IO.hs
authenticate/OpenId2/: Discovery.hs
authenticate/Web/Authenticate/: BrowserId.hs
