name:            authenticate-oauth
version:         1.4.0.8
license:         BSD3
license-file:    LICENSE
author:          Hiromi Ishii
maintainer:      Hiromi Ishii
synopsis:        Library to authenticate with OAuth for Haskell web applications.
description:     OAuth authentication, e.g. Twitter.
category:        Web
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/yesodweb/authenticate

library
    build-depends:   base                          >= 4        && < 5
                   , http-conduit                  >= 1.4
                   , transformers                  >= 0.1
                   , bytestring                    >= 0.9
                   , crypto-pubkey-types           >= 0.1
                   , RSA                           >= 1.2
                   , time
                   , data-default
                   , base64-bytestring             >= 0.1
                   , SHA                           >= 1.4
                   , random
                   , http-types                    >= 0.6
                   , blaze-builder
                   , conduit                       >= 1.1
                   , conduit-extra                 >= 1.1
                   , resourcet                     >= 1.1
                   , blaze-builder-conduit         >= 0.4
                   , monad-control                 >= 0.3
    exposed-modules: Web.Authenticate.OAuth, Web.Authenticate.OAuth.IO
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/authenticate.git
